# pds_proj

./: CMakeLists.txt  HashC.cpp  HashC.h  hash.h  how_to_farlo_partire.txt
client/: ClientC.cpp  ClientC.h  ClientStructureManage.cpp  FileManageClient.cpp  StructureC.cpp  StructureC.h  client  client.cpp  fw  main.cpp
client/filewatcher/: FileWatcher.h  filewatcher.cpp
client/utility/: ClientStructureManage.cpp  FileManageClient.cpp  client-struct.json  client.cpp  server-struct.json
server/: FileManage.cpp  Server.cpp  ServerC.cpp  ServerC.h  ServerStructureC.cpp  ServerStructureC.h  ServerStructureManage.cpp  main.cpp  server  server2  server2.cpp  test.db  users.cpp  users.h
server/ServerFSBeppe/: Easy2.txt
server/ServerFSNino/Slides/: testo2.txt
server/utility/: FileManageServer.cpp  ServerStructureManage.cpp  ServerTest.cpp  client-struct.json  server-struct.json  server_old.cpp
utility/: json.hpp
